# crypto-ai-mcp-server

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/: __init__.py  logging.py  mcp_tools.py
src/ai/: __init__.py  engine.py
src/cex/: __init__.py  ccxt_client.py
src/config/: env.py
src/evm/: __init__.py  evm_client.py
src/mcp_crypto_bot/: __init__.py  server.py
src/news_trading/: __init__.py
src/portfolio/: __init__.py
src/solana/: __init__.py  solana_client.py
src/telegram/: bot.py
src/wallets/: __init__.py  evm_wallets.py  sol_wallets.py
tests/: test_basic.py
